syntax = "proto3";


option go_package="github.com/amina-b/gRPC-basic/models";

service UsersService {
  rpc ValidateUsers (stream UserRequest) returns (UserResponse) {}
}

// The request message containing the user's info
message UserRequest {
  string name = 1;
  int64 id = 2;
  string email = 3;
}

// The response message containing users with wrong emails
message UserResponse {
  repeated string invalidEmail = 1;
}

 